updated with password support

--- a/Redis-SSL/redis.conf
+++ b/Redis-SSL/redis.conf
@@ -3,3 +3,4 @@ tls-key-file /etc/ssl/private/server.key
 tls-ca-cert-file /etc/ssl/certs/server.cert
 tls-port 6479
 tls-auth-clients no
+requirepass mypassword
