--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,9 +3,21 @@ nodaemon=true
 
 [program:stunnel_s1]
 command=/usr/bin/stunnel ./server1.conf
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/server1.err.log
+stdout_logfile=/var/log/server1.out.log
 
 [program:stunnel_s2]
 command=/usr/bin/stunnel ./server2.conf
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/server2.err.log
+stdout_logfile=/var/log/server2.out.log
 
 [program:nutcracker]
 command=/usr/local/sbin/nutcracker -c /etc/nutcracker.yml
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/nutcracker.err.log
+stdout_logfile=/var/log/nutcracker.out.log
