cleaned up docker image

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,14 +2,14 @@
 nodaemon=true
 
 [program:stunnel_s1]
-command=/usr/bin/stunnel ./server1.conf
+command=/usr/bin/stunnel ./stunnel/server1.conf
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/server1.err.log
 stdout_logfile=/var/log/server1.out.log
 
 [program:stunnel_s2]
-command=/usr/bin/stunnel ./server2.conf
+command=/usr/bin/stunnel ./stunnel/server2.conf
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/server2.err.log
