--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,19 +1,12 @@
 [supervisord]
 nodaemon=true
 
-[program:stunnel_s1]
-command=/usr/bin/stunnel ./stunnel/server1.conf
+[program:client]
+command=/usr/bin/stunnel ./stunnel/client.conf
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/server1.err.log
-stdout_logfile=/var/log/server1.out.log
-
-[program:stunnel_s2]
-command=/usr/bin/stunnel ./stunnel/server2.conf
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/server2.err.log
-stdout_logfile=/var/log/server2.out.log
+stderr_logfile=/var/log/client.err.log
+stdout_logfile=/var/log/client.out.log
 
 [program:nutcracker]
 command=/usr/local/sbin/nutcracker -c /etc/nutcracker.yml
